2003-10-24  Jeff Martin <jeff@custommonkey.org>

	* Makefile.am cong-app.c cong-fake-plugin-hooks.h plugin-doc-from-xds.c plugin-templates.c

	Replaced doc-from-xds plugin with template plugin

2003-10-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-editor-widget3.c

	Fixes for deletion of selection for new selection semantics
	
	* cong-node.c, cong-node.h, cong-range.c, cong-range.h, xmledit.c

	Bulletproofing for clipboard operations
	
	* cong-command.c, cong-editor-node-text.c, cong-selection.h

	Fixed warnings
	
	* cong-font.c

	Removed last traces of GdkFont

2003-10-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-source-view.c, cong-tree-view.c, cong-util.c

	Fixes for warnings
	
	* cong-location.c, cong-location.h, cong-node.c, cong-node.h, cong-range.c

	Enhancements of CongLocation and CongRange to match selection semantics change, and to support Edit->Copy of selected node
	
	* cong-editor-area.c

	Fixed typo
	
	* cong-eel-graphic-effects.c

	Fixed header filename
	
	* cong-editor-area-text-fragment.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c

	Editor areas now support mouse cursors; text areas use an I-beam

	* cong-editor-area-pixbuf.c, cong-editor-area-structural.c, cong-editor-area.c, cong-editor-area.h

	Prelight for icons in structural headers
	
	* cong-eel-graphic-effects.c, cong-eel-graphic-effects.h, Makefile.am

	New files, copied and pasted from eel
	
	* cong-node.c

	Self-test now handles children of an entity reference correctly

	* cong-editor-area-text-fragment.c, cong-editor-node-text.c

	Initial attempt to do prelighting of text fragments

2003-10-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-cleanup-source.c

	Fix for bug #125119
	
	* cong-document.c, cong-document.h, cong-dom-view.c, cong-editor-area.c, cong-location.c, cong-location.h, cong-overview-view.c, cong-tree-view.c, cong-tree-view.h, cong-util.c, cong-util.h
