@@ -1,3 +1,9 @@
+2003-10-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>
+
+	* cong-location.c
+
+	Made moving the cursor to the right move through tags just like cursor movement to the left (bug #125341).
+
 2003-10-24  Jeff Martin <jeff@custommonkey.org>
 
 	* Makefile.am cong-app.c cong-fake-plugin-hooks.h plugin-doc-from-xds.c plugin-templates.c
